--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -637,20 +637,188 @@ video {
   left: 7.5rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.left-10 {
+  left: 2.5rem;
+}
+
+.right-\[-200px\] {
+  right: -200px;
+}
+
+.right-\[-10px\] {
+  right: -10px;
+}
+
+.right-\[-20px\] {
+  right: -20px;
+}
+
+.right-\[-40px\] {
+  right: -40px;
+}
+
+.right-\[-60px\] {
+  right: -60px;
+}
+
+.right-\[-70px\] {
+  right: -70px;
+}
+
+.bottom-32 {
+  bottom: 8rem;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
+.right-\[-65px\] {
+  right: -65px;
+}
+
+.right-\[-50px\] {
+  right: -50px;
+}
+
+.bottom-\[1rem\] {
+  bottom: 1rem;
+}
+
+.bottom-\[0\.6rem\] {
+  bottom: 0.6rem;
+}
+
+.right-\[-57px\] {
+  right: -57px;
+}
+
+.bottom-\[0\.5rem\] {
+  bottom: 0.5rem;
+}
+
+.right-\[-52px\] {
+  right: -52px;
+}
+
+.right-\[-3\.125px\] {
+  right: -3.125px;
+}
+
+.right-\[-3\.125rem\] {
+  right: -3.125rem;
+}
+
+.bottom-\[10rem\] {
+  bottom: 10rem;
+}
+
+.bottom-\[0\.4rem\] {
+  bottom: 0.4rem;
+}
+
+.right-\[-10rem\] {
+  right: -10rem;
+}
+
+.right-\[10rem\] {
+  right: 10rem;
+}
+
+.bottom-\[0\.3rem\] {
+  bottom: 0.3rem;
+}
+
+.bottom-\[0\.2rem\] {
+  bottom: 0.2rem;
+}
+
+.right-\[11rem\] {
+  right: 11rem;
+}
+
+.right-\[1rem\] {
+  right: 1rem;
+}
+
+.right-\[-2rem\] {
+  right: -2rem;
+}
+
+.bottom-\[rem\] {
+  bottom: rem;
+}
+
+.bottom-\[0rem\] {
+  bottom: 0rem;
+}
+
+.bottom-\[-1rem\] {
+  bottom: -1rem;
+}
+
+.bottom-\[-1\.5rem\] {
+  bottom: -1.5rem;
+}
+
+.bottom-\[-1\.55rem\] {
+  bottom: -1.55rem;
+}
+
+.right-\[-2\.5rem\] {
+  right: -2.5rem;
+}
+
+.right-\[-3\.5rem\] {
+  right: -3.5rem;
+}
+
+.right-\[-4rem\] {
+  right: -4rem;
+}
+
+.right-\[0rem\] {
+  right: 0rem;
+}
+
 .z-20 {
   z-index: 20;
 }
 
-.z-50 {
-  z-index: 50;
+.z-10 {
+  z-index: 10;
 }
 
 .z-40 {
   z-index: 40;
-}
-
-.z-10 {
-  z-index: 10;
 }
 
 .mx-auto {
@@ -694,6 +862,10 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mr-10 {
+  margin-right: 2.5rem;
 }
 
 .block {
@@ -740,6 +912,10 @@ video {
   height: 1.75rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -772,42 +948,6 @@ video {
   height: 5rem;
 }
 
-.h-\[100wv\] {
-  height: 100wv;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
-}
-
-.h-\[100100\%\] {
-  height: 100100%;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[10\%\] {
-  height: 10%;
-}
-
-.h-auto {
-  height: auto;
-}
-
-.h-\[3000px\] {
-  height: 3000px;
-}
-
-.h-\[30000px\] {
-  height: 30000px;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
 .max-h-\[17rem\] {
   max-height: 17rem;
 }
@@ -830,6 +970,10 @@ video {
 
 .w-8 {
   width: 2rem;
+}
+
+.w-\[100\%\] {
+  width: 100%;
 }
 
 .w-\[27\.5rem\] {
@@ -856,7 +1000,7 @@ video {
   width: 0.75rem;
 }
 
-.w-\[100\%\] {
+.w-full {
   width: 100%;
 }
 
@@ -864,12 +1008,28 @@ video {
   width: 75%;
 }
 
-.w-\[100vw\] {
-  width: 100vw;
+.w-auto {
+  width: auto;
 }
 
-.w-full {
-  width: 100%;
+.w-20 {
+  width: 5rem;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-24 {
+  width: 6rem;
+}
+
+.w-2 {
+  width: 0.5rem;
 }
 
 .max-w-full {
@@ -1107,6 +1267,10 @@ video {
   border-width: 2px;
 }
 
+.border-8 {
+  border-width: 8px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1174,6 +1338,11 @@ video {
   border-color: rgba(107, 114, 128, var(--tw-border-opacity));
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
+}
+
 .border-t-yellow-500 {
   --tw-border-opacity: 1;
   border-top-color: rgba(245, 158, 11, var(--tw-border-opacity));
@@ -1199,11 +1368,6 @@ video {
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
-}
-
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
   background-color: rgba(0,0,0,0.7);
 }
@@ -1223,24 +1387,24 @@ video {
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 
-.bg-green-200 {
+.bg-yellow-300 {
   --tw-bg-opacity: 1;
-  background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
+  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
 }
 
-.bg-green-600 {
+.bg-gray-500 {
   --tw-bg-opacity: 1;
-  background-color: rgba(5, 150, 105, var(--tw-bg-opacity));
+  background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
 }
 
-.bg-green-400 {
+.bg-gray-400 {
   --tw-bg-opacity: 1;
-  background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
+  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
 
-.bg-green-300 {
+.bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1332,6 +1496,26 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .pl-2 {
@@ -1500,6 +1684,39 @@ video {
   line-height: 2.5rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
+}
+
+.text-\[0\.1rem\] {
+  font-size: 0.1rem;
+}
+
+.text-\[0\.5rem\] {
+  font-size: 0.5rem;
+}
+
+.text-\[0\.8rem\] {
+  font-size: 0.8rem;
+}
+
+.text-\[0\.7rem\] {
+  font-size: 0.7rem;
+}
+
+.text-\[0\.75rem\] {
+  font-size: 0.75rem;
+}
+
+.text-\[0\.6rem\] {
+  font-size: 0.6rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
@@ -1607,13 +1824,33 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
   filter: var(--tw-filter);
 }
 
+.drop-shadow {
+  --tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
+  filter: var(--tw-filter);
+}
+
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+  filter: var(--tw-filter);
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
   filter: var(--tw-filter);
 }
 
@@ -1871,6 +2108,46 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-yellow-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-yellow-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-yellow-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#242424\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(36, 36, 36, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#272727\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#4d4d4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(77, 77, 77, var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgba(209, 213, 219, var(--tw-text-opacity));
@@ -1899,6 +2176,36 @@ video {
 .dark .dark\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgba(75, 85, 99, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgba(107, 114, 128, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgba(17, 24, 39, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-\[\#313131\] {
+  --tw-text-opacity: 1;
+  color: rgba(49, 49, 49, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-\[\#3f3f3f\] {
+  --tw-text-opacity: 1;
+  color: rgba(63, 63, 63, var(--tw-text-opacity));
+}
+
+.dark .dark\:text-\[\#494949\] {
+  --tw-text-opacity: 1;
+  color: rgba(73, 73, 73, var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow {
@@ -1976,6 +2283,14 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:right-\[-3\.125rem\] {
+    right: -3.125rem;
+  }
+
+  .md\:bottom-\[0\.5rem\] {
+    bottom: 0.5rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -2045,6 +2360,10 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-\[0\.75rem\] {
+    font-size: 0.75rem;
   }
 }
 
