--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -629,6 +629,14 @@ video {
   right: 0px;
 }
 
+.right-\[-2\.5rem\] {
+  right: -2.5rem;
+}
+
+.bottom-\[0\.2rem\] {
+  bottom: 0.2rem;
+}
+
 .top-5 {
   top: 1.25rem;
 }
@@ -637,176 +645,8 @@ video {
   left: 7.5rem;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.right-10 {
-  right: 2.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.right-\[-200px\] {
-  right: -200px;
-}
-
-.right-\[-10px\] {
-  right: -10px;
-}
-
-.right-\[-20px\] {
-  right: -20px;
-}
-
-.right-\[-40px\] {
-  right: -40px;
-}
-
-.right-\[-60px\] {
-  right: -60px;
-}
-
-.right-\[-70px\] {
-  right: -70px;
-}
-
-.bottom-32 {
-  bottom: 8rem;
-}
-
-.bottom-1 {
-  bottom: 0.25rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.right-\[-65px\] {
-  right: -65px;
-}
-
-.right-\[-50px\] {
-  right: -50px;
-}
-
-.bottom-\[1rem\] {
-  bottom: 1rem;
-}
-
-.bottom-\[0\.6rem\] {
-  bottom: 0.6rem;
-}
-
-.right-\[-57px\] {
-  right: -57px;
-}
-
-.bottom-\[0\.5rem\] {
-  bottom: 0.5rem;
-}
-
-.right-\[-52px\] {
-  right: -52px;
-}
-
-.right-\[-3\.125px\] {
-  right: -3.125px;
-}
-
-.right-\[-3\.125rem\] {
-  right: -3.125rem;
-}
-
-.bottom-\[10rem\] {
-  bottom: 10rem;
-}
-
-.bottom-\[0\.4rem\] {
-  bottom: 0.4rem;
-}
-
-.right-\[-10rem\] {
-  right: -10rem;
-}
-
-.right-\[10rem\] {
-  right: 10rem;
-}
-
-.bottom-\[0\.3rem\] {
-  bottom: 0.3rem;
-}
-
-.bottom-\[0\.2rem\] {
-  bottom: 0.2rem;
-}
-
-.right-\[11rem\] {
-  right: 11rem;
-}
-
-.right-\[1rem\] {
-  right: 1rem;
-}
-
-.right-\[-2rem\] {
-  right: -2rem;
-}
-
-.bottom-\[rem\] {
-  bottom: rem;
-}
-
-.bottom-\[0rem\] {
-  bottom: 0rem;
-}
-
-.bottom-\[-1rem\] {
-  bottom: -1rem;
-}
-
-.bottom-\[-1\.5rem\] {
-  bottom: -1.5rem;
-}
-
-.bottom-\[-1\.55rem\] {
-  bottom: -1.55rem;
-}
-
-.right-\[-2\.5rem\] {
-  right: -2.5rem;
-}
-
-.right-\[-3\.5rem\] {
-  right: -3.5rem;
-}
-
-.right-\[-4rem\] {
-  right: -4rem;
-}
-
-.right-\[0rem\] {
-  right: 0rem;
+.right-\[-2\.125rem\] {
+  right: -2.125rem;
 }
 
 .z-20 {
@@ -862,10 +702,6 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
 }
 
 .block {
@@ -976,6 +812,10 @@ video {
   width: 100%;
 }
 
+.w-24 {
+  width: 6rem;
+}
+
 .w-\[27\.5rem\] {
   width: 27.5rem;
 }
@@ -1006,30 +846,6 @@ video {
 
 .w-\[75\%\] {
   width: 75%;
-}
-
-.w-auto {
-  width: auto;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-2 {
-  width: 0.5rem;
 }
 
 .max-w-full {
@@ -1074,59 +890,6 @@ video {
   transform: var(--tw-transform);
 }
 
-@-webkit-keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  -webkit-animation: spin 1s linear infinite;
-          animation: spin 1s linear infinite;
-}
-
-@-webkit-keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.animate-ping {
-  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-@-webkit-keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.animate-pulse {
-  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
 @-webkit-keyframes bounce {
   0%, 100% {
     transform: translateY(-25%);
@@ -1158,6 +921,40 @@ video {
 .animate-bounce {
   -webkit-animation: bounce 1s infinite;
           animation: bounce 1s infinite;
+}
+
+@-webkit-keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@-webkit-keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -1312,16 +1109,16 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded-full {
-  border-radius: 9999px;
 }
 
 .rounded-sm {
@@ -1334,10 +1131,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-8 {
-  border-width: 8px;
 }
 
 .border-b-2 {
@@ -1388,13 +1181,13 @@ video {
   border-color: rgba(217, 119, 6, var(--tw-border-opacity));
 }
 
+.border-transparent {
+  border-color: transparent;
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-
-.border-transparent {
-  border-color: transparent;
 }
 
 .border-gray-400 {
@@ -1405,11 +1198,6 @@ video {
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgba(107, 114, 128, var(--tw-border-opacity));
-}
-
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
 
 .border-t-yellow-500 {
@@ -1437,6 +1225,16 @@ video {
   background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
+
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
+}
+
 .bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
   background-color: rgba(0,0,0,0.7);
 }
@@ -1454,26 +1252,6 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.bg-yellow-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(252, 211, 77, var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(107, 114, 128, var(--tw-bg-opacity));
-}
-
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1542,6 +1320,11 @@ video {
   padding-right: 1rem;
 }
 
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
@@ -1565,26 +1348,6 @@ video {
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-\[10px\] {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.py-\[2px\] {
-  padding-top: 2px;
-  padding-bottom: 2px;
 }
 
 .pl-2 {
@@ -1733,6 +1496,10 @@ video {
   font-size: 48px;
 }
 
+.text-\[0\.75rem\] {
+  font-size: 0.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1751,39 +1518,6 @@ video {
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-\[1rem\] {
-  font-size: 1rem;
-}
-
-.text-\[0\.1rem\] {
-  font-size: 0.1rem;
-}
-
-.text-\[0\.5rem\] {
-  font-size: 0.5rem;
-}
-
-.text-\[0\.8rem\] {
-  font-size: 0.8rem;
-}
-
-.text-\[0\.7rem\] {
-  font-size: 0.7rem;
-}
-
-.text-\[0\.75rem\] {
-  font-size: 0.75rem;
-}
-
-.text-\[0\.6rem\] {
-  font-size: 0.6rem;
 }
 
 .font-semibold {
@@ -1893,33 +1627,13 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .drop-shadow-sm {
   --tw-drop-shadow: drop-shadow(0 1px 1px rgba(0,0,0,0.05));
   filter: var(--tw-filter);
 }
 
-.drop-shadow {
-  --tw-drop-shadow: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1)) drop-shadow(0 1px 1px rgba(0, 0, 0, 0.06));
-  filter: var(--tw-filter);
-}
-
 .drop-shadow-md {
   --tw-drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07)) drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
-  filter: var(--tw-filter);
-}
-
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgba(0, 0, 0, 0.04)) drop-shadow(0 4px 3px rgba(0, 0, 0, 0.1));
   filter: var(--tw-filter);
 }
 
@@ -1998,11 +1712,6 @@ video {
   border-color: rgba(245, 158, 11, var(--tw-border-opacity));
 }
 
-.hover\:border-gray-200:hover {
-  --tw-border-opacity: 1;
-  border-color: rgba(229, 231, 235, var(--tw-border-opacity));
-}
-
 .hover\:border-transparent:hover {
   border-color: transparent;
 }
@@ -2032,19 +1741,9 @@ video {
   border-color: rgba(180, 83, 9, var(--tw-border-opacity));
 }
 
-.active\:border-gray-100:active {
-  --tw-border-opacity: 1;
-  border-color: rgba(243, 244, 246, var(--tw-border-opacity));
-}
-
 .active\:bg-yellow-700:active {
   --tw-bg-opacity: 1;
   background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
-}
-
-.active\:bg-gray-100:active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
 
 .active\:text-yellow-400:active {
@@ -2104,11 +1803,6 @@ video {
   border-color: rgba(65, 14, 5, var(--tw-border-opacity));
 }
 
-.dark .dark\:border-\[\#2e2e2e\] {
-  --tw-border-opacity: 1;
-  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
-}
-
 .dark .dark\:border-\[\#444444\] {
   --tw-border-opacity: 1;
   border-color: rgba(68, 68, 68, var(--tw-border-opacity));
@@ -2148,9 +1842,14 @@ video {
   background-color: rgba(121, 28, 12, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-\[\#3f3f3f\] {
+.dark .dark\:bg-\[\#272727\] {
   --tw-bg-opacity: 1;
-  background-color: rgba(63, 63, 63, var(--tw-bg-opacity));
+  background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-\[\#4d4d4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgba(77, 77, 77, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-\[rgba\(0\2c 0\2c 0\2c 0\.7\)\] {
@@ -2177,46 +1876,6 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-yellow-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-yellow-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-yellow-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#242424\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(36, 36, 36, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#272727\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(39, 39, 39, var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-\[\#4d4d4d\] {
-  --tw-bg-opacity: 1;
-  background-color: rgba(77, 77, 77, var(--tw-bg-opacity));
-}
-
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgba(209, 213, 219, var(--tw-text-opacity));
@@ -2232,6 +1891,11 @@ video {
   color: rgba(229, 231, 235, var(--tw-text-opacity));
 }
 
+.dark .dark\:text-\[\#494949\] {
+  --tw-text-opacity: 1;
+  color: rgba(73, 73, 73, var(--tw-text-opacity));
+}
+
 .dark .dark\:text-\[\#444444\] {
   --tw-text-opacity: 1;
   color: rgba(68, 68, 68, var(--tw-text-opacity));
@@ -2245,36 +1909,6 @@ video {
 .dark .dark\:text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgba(75, 85, 99, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgba(107, 114, 128, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgba(17, 24, 39, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#313131\] {
-  --tw-text-opacity: 1;
-  color: rgba(49, 49, 49, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#3f3f3f\] {
-  --tw-text-opacity: 1;
-  color: rgba(63, 63, 63, var(--tw-text-opacity));
-}
-
-.dark .dark\:text-\[\#494949\] {
-  --tw-text-opacity: 1;
-  color: rgba(73, 73, 73, var(--tw-text-opacity));
 }
 
 .dark .dark\:shadow {
@@ -2301,11 +1935,6 @@ video {
   background-color: rgba(143, 34, 14, var(--tw-bg-opacity));
 }
 
-.dark .dark\:hover\:bg-\[\#505050\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgba(80, 80, 80, var(--tw-bg-opacity));
-}
-
 .dark .dark\:hover\:bg-\[\#363636\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(54, 54, 54, var(--tw-bg-opacity));
@@ -2321,19 +1950,9 @@ video {
   border-color: rgba(110, 26, 11, var(--tw-border-opacity));
 }
 
-.dark .dark\:active\:border-\[\#2e2e2e\]:active {
-  --tw-border-opacity: 1;
-  border-color: rgba(46, 46, 46, var(--tw-border-opacity));
-}
-
 .dark .dark\:active\:bg-\[\#6e1a0b\]:active {
   --tw-bg-opacity: 1;
   background-color: rgba(110, 26, 11, var(--tw-bg-opacity));
-}
-
-.dark .dark\:active\:bg-\[\#2e2e2e\]:active {
-  --tw-bg-opacity: 1;
-  background-color: rgba(46, 46, 46, var(--tw-bg-opacity));
 }
 
 .dark .group:hover .dark\:group-hover\:text-gold-light {
@@ -2356,8 +1975,36 @@ video {
     right: -3.125rem;
   }
 
-  .md\:bottom-\[0\.5rem\] {
-    bottom: 0.5rem;
+  .md\:bottom-\[10rem\] {
+    bottom: 10rem;
+  }
+
+  .md\:bottom-\[1rem\] {
+    bottom: 1rem;
+  }
+
+  .md\:bottom-\[0\.9rem\] {
+    bottom: 0.9rem;
+  }
+
+  .md\:bottom-\[0\.8rem\] {
+    bottom: 0.8rem;
+  }
+
+  .md\:bottom-\[0\.7rem\] {
+    bottom: 0.7rem;
+  }
+
+  .md\:bottom-\[0\.6rem\] {
+    bottom: 0.6rem;
+  }
+
+  .md\:right-\[-5\.125rem\] {
+    right: -5.125rem;
+  }
+
+  .md\:right-\[-2\.125rem\] {
+    right: -2.125rem;
   }
 
   .md\:block {
@@ -2429,10 +2076,6 @@ video {
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
-  }
-
-  .md\:text-\[0\.75rem\] {
-    font-size: 0.75rem;
   }
 }
 
