--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -629,8 +629,8 @@ video {
   right: 0px;
 }
 
-.right-\[-2\.5rem\] {
-  right: -2.5rem;
+.right-\[-2\.125rem\] {
+  right: -2.125rem;
 }
 
 .bottom-\[0\.2rem\] {
@@ -643,10 +643,6 @@ video {
 
 .left-\[7\.5rem\] {
   left: 7.5rem;
-}
-
-.right-\[-2\.125rem\] {
-  right: -2.125rem;
 }
 
 .z-20 {
@@ -702,6 +698,14 @@ video {
 
 .mb-10 {
   margin-bottom: 2.5rem;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .block {
@@ -874,6 +878,16 @@ video {
   transform: var(--tw-transform);
 }
 
+.rotate-45 {
+  --tw-rotate: 45deg;
+  transform: var(--tw-transform);
+}
+
+.rotate-12 {
+  --tw-rotate: 12deg;
+  transform: var(--tw-transform);
+}
+
 .scale-0 {
   --tw-scale-x: 0;
   --tw-scale-y: 0;
@@ -1005,6 +1019,10 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
 }
@@ -1091,6 +1109,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
+}
+
+.space-x-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.75rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1252,6 +1276,16 @@ video {
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
+
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(110, 231, 183, var(--tw-bg-opacity));
+}
+
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1538,6 +1572,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .text-transparent {
@@ -1876,6 +1914,21 @@ video {
   background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-blue-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(30, 58, 138, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-green-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 78, 59, var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-green-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(6, 95, 70, var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-300 {
   --tw-text-opacity: 1;
   color: rgba(209, 213, 219, var(--tw-text-opacity));
@@ -1971,40 +2024,48 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:right-\[-3\.125rem\] {
-    right: -3.125rem;
-  }
-
-  .md\:bottom-\[10rem\] {
-    bottom: 10rem;
-  }
-
-  .md\:bottom-\[1rem\] {
-    bottom: 1rem;
-  }
-
-  .md\:bottom-\[0\.9rem\] {
-    bottom: 0.9rem;
-  }
-
-  .md\:bottom-\[0\.8rem\] {
-    bottom: 0.8rem;
-  }
-
-  .md\:bottom-\[0\.7rem\] {
-    bottom: 0.7rem;
+  .md\:right-\[-2\.125rem\] {
+    right: -2.125rem;
   }
 
   .md\:bottom-\[0\.6rem\] {
     bottom: 0.6rem;
   }
 
-  .md\:right-\[-5\.125rem\] {
-    right: -5.125rem;
+  .md\:bottom-\[0\.1rem\] {
+    bottom: 0.1rem;
   }
 
-  .md\:right-\[-2\.125rem\] {
-    right: -2.125rem;
+  .md\:right-\[-3\.125rem\] {
+    right: -3.125rem;
+  }
+
+  .md\:right-\[-1\.125rem\] {
+    right: -1.125rem;
+  }
+
+  .md\:right-\[-2rem\] {
+    right: -2rem;
+  }
+
+  .md\:right-\[-3rem\] {
+    right: -3rem;
+  }
+
+  .md\:right-\[-1\.9rem\] {
+    right: -1.9rem;
+  }
+
+  .md\:right-\[-1\.8rem\] {
+    right: -1.8rem;
+  }
+
+  .md\:bottom-\[0\.2rem\] {
+    bottom: 0.2rem;
+  }
+
+  .md\:bottom-\[0\.3rem\] {
+    bottom: 0.3rem;
   }
 
   .md\:block {
@@ -2021,6 +2082,10 @@ video {
 
   .md\:items-end {
     align-items: flex-end;
+  }
+
+  .md\:justify-center {
+    justify-content: center;
   }
 
   .md\:justify-between {
@@ -2120,6 +2185,10 @@ video {
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:flex-row-reverse {
+    flex-direction: row-reverse;
   }
 
   .lg\:items-start {
